fix: improve error handling on password change page
Made changes to the password update page on the Account tab to handle errors more clearly.

* Moved the error box below the submit button (from its original location at the top of the page). This makes it a lot easier to see, fixing an issue where on small phones (or in French, or with large font), the error box would be cut off at the top edge of the screen, and users may not even know an error occurred.
* Added a popup when password change succeeds, to log the user out.
* A permission denied error will now occur if a password change request is sent with another email address. This will be displayed as "Something went wrong".
* Light refactoring.

See merge request opalmedapps/qplus!1286

--- a/src/css/views/account-settings.view.css
+++ b/src/css/views/account-settings.view.css
@@ -17,21 +17,6 @@
     font-size: 14px;
 }
 
-.updateMessage-success {
-    border:1px solid;
-    border-radius:5px;
-    border-color: #3c763d;
-    color: #3c763d;
-    padding:1vh;
-}
-.updateMessage-error {
-    border:1px solid;
-    border-radius:5px;
-    border-color: #a94442;
-    color: #a94442;
-    padding:1vh;
-}
-
 .relationship-list--status {
     color: gray;
     font-size: 1.5rem !important;
@@ -61,6 +46,10 @@
     margin-bottom: 20px;
     padding: 14px 10px;
     width: 100%;
+}
+
+.change-password--header {
+    margin-top: 10px;
 }
 
 .change-password--instructions {
